<resources>
    <string name="app_name">Aice Lucky Wheel</string>
    <string name="str_username">Username</string>
    <string name="str_password">Password</string>
    <string name="str_login">Login</string>
    <string name="str_daftar">Belum punya akun? Daftar </string>
    <string name="str_sini">di sini</string>
    <string name="str_detail_login">Detail Login</string>
    <string name="str_detail_outlet">Detail Outlet</string>
    <string name="str_nama_outlet">Nama Outlet</string>
    <string name="str_daftar_outlet">Daftar Outlet</string>
    <string name="key_preference">com.vjtechsolution.aice_lucky_wheel</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
