<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBg"
    tools:context=".RegisterUserActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/logo_blue"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_above="@+id/detailLogin"/>

    <LinearLayout
        android:id="@+id/detailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detailLoginHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:typeface="monospace"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:text="@string/str_detail_login"
                android:layout_marginBottom="10dp"
                android:paddingLeft="5dp"/>

            <EditText
                android:id="@+id/daftarUsername"
                android:typeface="monospace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginBottom="5dp"
                android:hint="@string/str_username"/>

            <EditText
                android:id="@+id/daftarPassword"
                android:typeface="monospace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:hint="@string/str_password"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detailOutletHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:typeface="monospace"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:text="@string/str_detail_outlet"
                android:layout_marginBottom="10dp"
                android:paddingLeft="5dp"/>

            <EditText
                android:id="@+id/daftarNamaOutlet"
                android:typeface="monospace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginBottom="5dp"
                android:hint="@string/str_nama_outlet"/>

        </LinearLayout>

        <Button
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:id="@+id/daftarButton"
            android:typeface="monospace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/str_daftar_outlet"/>

    </LinearLayout>

</RelativeLayout>